--- a/wiki/Software_Requirements_Specification.wiki
+++ b/wiki/Software_Requirements_Specification.wiki
@@ -35,12 +35,10 @@ Actor: Server admin
 
 Steps:
 
- # Open server: The actor launches the server application.
  # Load mission: The actor selects and loads the mission, either a initial campaign template to start a new campaign or a save-game to continue an existing campaign.
  # Start battle: The campaign progress continues as soon as the battle is started.
  # Auto save: The save-game is created periodically to recover the progress in case of a server crash.
  # Stop battle: The campaign progress is stopped and a save-game is created.
- # Close server: The server application is closed.
 
 === Attend mission ===
 
@@ -48,20 +46,18 @@ Actor: Multiplayer pilot, single-player pilot, squadron commander
 
 Steps:
 
- # Login server: The actor launches the client application
- # Connect server: The actor connects to the server running IL2DCE.
- # Select army: Once connected the actor selects his army. 
- # Get aircraft information: The actor can get information over the current state and task for each of the available aircrafts. 
- # Select aircraft: He can then select one of the aircraft available aircraft. 
+ # Select army: The actor selects his army. 
+ # Get aircraft information: The actor can get information over the current state and task for each of the available squadrons. 
+ # Select aircraft: He can then selects a squadron and one of its available aircraft. 
  # Read briefing: The actor can read the briefing that contains the mission goal, mission parameter and flight plan.
  # Fly mission: The actor flies the mission as the pilot of the selected aircraft.
  # Read debriefing: After the actor has finished the mission he can read the debriefing containing the mission result, achievements and statistics. 
- # Logout server: The actor disconnects from the server.
 
 Variations:
 
- * If the actor disconnects before the mission is finished his aircraft will continue under AI control.
+ * If the actor leaves the mission before it is finished his aircraft will continue under AI control.
  * After selecting a aircraft the actor may switch to a different aircraft. 
+ * The actor may be tied to one squadron and aircraft. In this case he is unable to select a different squadron and aircraft.
 
 === Adjust mission ===
 
