Edited wiki page Software_Requirements_Specification through web user interface.

--- a/wiki/Software_Requirements_Specification.wiki
+++ b/wiki/Software_Requirements_Specification.wiki
@@ -98,11 +98,12 @@ Actor: AMission, Simulator
 
 Steps:
 
- # ...
+ # Notify change: The actor notifies the system about a change.
+ # React on change: The system calls the actor to react on a change.
 
 Variations:
 
- * ...
+ * Request data: The system requests additional data from the actor to impose the proper reaction.
 
 === Create campaign ===
 
